--- a/src/main/resources/ldap.properties
+++ b/src/main/resources/ldap.properties
@@ -5,3 +5,6 @@ sample.ldap.password=G0qGH9L7e
 sample.ldap.base=dc=openldap,dc=jw,dc=cn
 sample.ldap.clean=false
 sample.ldap.directory.type=NORMAL
+
+ldap.acl.adminRole=AUTHORITY_SYSTEM_ADMIN
+ldap.acl.defaultRole=AUTHORITY_SYSTEM_USER
