登录，认证以及关联权限

--- a/src/main/resources/ldap.properties
+++ b/src/main/resources/ldap.properties
@@ -6,5 +6,7 @@ sample.ldap.base=dc=openldap,dc=jw,dc=cn
 sample.ldap.clean=false
 sample.ldap.directory.type=NORMAL
 
+ldap.user.searchPattern=cn={0}
+ldap.user.groupSearchBase=ou=Group,dc=openldap,dc=jw,dc=cn
 ldap.acl.adminRole=AUTHORITY_SYSTEM_ADMIN
-ldap.acl.defaultRole=AUTHORITY_SYSTEM_USER
+ldap.acl.defaultRole=AUTHORITY_SYSTEM_USER1
