添加关键方法注释

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -58,4 +58,8 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath:/spring-security.xml</param-value>
     </context-param>
+    
+    <welcome-file-list>  
+        <welcome-file>login.jsp</welcome-file>  
+	</welcome-file-list> 
 </web-app>
